[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "msunpv"
version = "0.1.1"
authors = [
  { name="franck VANHOUCKE", email="vanhoucke.franck@free.fr" },
]
description = "Library to interface an msunpv devices."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "aiohttp>=3,<4",
  "xmltodict"
]

[project.urls]
Homepage = "https://github.com/thanatos-vf-2000/msunpv"
Issues = "https://github.com/thanatos-vf-2000/msunpv"
Documents = "https://thanatos-vf-2000.github.io/msunpv/"